ci: increase check duration for certain resources
These resources are triggers for jobs and as such may run up against GH
API constraints.

However, the default check duration is 1 minute, which is unnecessarily
often given that both repos only add new commits / cut releases every
few weeks or so. Increasing the [`check_every`
field](https://concourse-ci.org/resources.html#schema.resource.check_every)
to 12 hours should reduce load on concourse & the GH API while still
providing good coverage to trigger desired jobs

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -104,11 +104,13 @@ resources:
 
 - name: golang-release
   type: git
+  check_every: 12h
   source:
     uri: https://github.com/bosh-packages/golang-release.git
 
 - name: cf-cli-release
   type: github-release
+  check_every: 12h
   source:
     owner: cloudfoundry
     repository: cli
