--- a/config/final.yml
+++ b/config/final.yml
@@ -1,8 +1,6 @@
 ---
 name: cf-smoke-tests
 blobstore:
-  provider: s3
+  provider: gcs
   options:
     bucket_name: cf-smoke-tests-release-bucket-ard-wg
-    region: eu-central-1
-    host: s3.eu-central-1.amazonaws.com
