Manually create new release 42.0.116

--- a/releases/cf-smoke-tests/index.yml
+++ b/releases/cf-smoke-tests/index.yml
@@ -419,6 +419,8 @@ builds:
     version: 42.0.25
   b0c92fcc-fbbd-453b-5263-c2a3c66f0454:
     version: 40.0.102
+  b2eb65ff-e417-4d15-582f-4ff301f5ba26:
+    version: 42.0.116
   b3561d02-f641-4521-48c4-fbee7ffddfd8:
     version: 42.0.57
   b4150b7f-2f55-4f57-6b74-f7ffddc77f2a:
