CI: fix update-release job
The
[bump-release-go-package task](https://github.com/cloudfoundry/bosh-package-golang-release/blob/main/ci/tasks/shared/bump-golang-package.yml)
and
[bump-cf-cli-windows-blob task](https://github.com/cloudfoundry/runtime-ci/blob/main/tasks/bump-cf-cli-windows-blob/task.yml)
were failing with errors like:

```
Marshaling config:
      json: unsupported type: map[interface {}]interface {}
```

This commit quotes the JSON key provided to the PRIVATE_YML params of
the two jobs such that they can parse the the params correctly.

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -172,7 +172,7 @@ jobs:
         blobstore:
           options:
             credentials_source: static
-            json_key: ((ci_dev_gcp_service_account_json))
+            json_key: '((ci_dev_gcp_service_account_json))'
   - task: bump-cf-cli-windows-blob
     file: runtime-ci/tasks/bump-cf-cli-windows-blob/task.yml
     input_mapping:
@@ -185,7 +185,7 @@ jobs:
         blobstore:
           options:
             credentials_source: static
-            json_key: ((ci_dev_gcp_service_account_json))
+            json_key: '((ci_dev_gcp_service_account_json))'
   - put: cf-smoke-tests-release
     params:
       repository: cf-smoke-tests-release
